# gpu-prometheus-exporter

./: Cargo.toml  Dockerfile  README.md  gpu-prometheus-exporter.service  nvidia-gpu-metrics.json
src/: main.rs
